--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,8 @@ h6 {
   left: 100px;
   height: auto;
   width: 35.3rem;
-  /* height: 80vh; */
-  height: 60vh;
+  height: 80vh;
+  /* height: 60vh; */
   color: rgb(90, 90, 0);
   background-color: lavender;
   padding: 30px;
@@ -70,6 +70,7 @@ h6 {
 }
 
 button {
+  cursor: pointer;
   background-color: thistle;
   border: none;
   border-radius: 8px;
@@ -81,6 +82,10 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 25px;
+}
+
+button:hover {
+  background-color: rgb(154, 123, 154);
 }
 
 .removefav {
@@ -97,7 +102,7 @@ button {
   font-size: 25px;
 }
 
-.remove {
+.remove, .removesort {
   background-color: rgb(117, 93, 117);
   border: none;
   border-radius: 8px;
@@ -109,6 +114,14 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 25px;
+}
+
+.removesort:hover {
+  background-color: rgb(117, 93, 117);
+}
+
+.remove:hover {
+  background-color: rgb(164, 138, 164);
 }
 
 .Header {
