--- a/src/App.css
+++ b/src/App.css
@@ -82,10 +82,14 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 25px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+
 }
 
 button:hover {
   background-color: rgb(154, 123, 154);
+  box-shadow: 0px 15px 20px rgba(83, 34, 88, 0.4);
+  transform: translateY(-7px);
 }
 
 .removefav {
@@ -118,10 +122,12 @@ button:hover {
 
 .removesort:hover {
   background-color: rgb(117, 93, 117);
+  box-shadow: none;
+  transform: none;
 }
 
-.remove:hover {
-  background-color: rgb(164, 138, 164);
+.remove:hover, .removefav:hover {
+  background-color: rgb(90, 68, 90);
 }
 
 .Header {
